discussion/kv_engine/173322/173322_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Return finished when create/scan are complete

When the DCPBackfill::run function returns

* backfill_success - the task will be scheduled for a future invocation
* backfill_finished - the task is deleted
* backfill_snooze -  the task will be scheduled for a future invocation
  after some time

When create/scan call complete they should not return backfill_success,
there is no need for a future call, instead return backfill_finished.

When DCPBackfillDisk sees backfill_finished returned it will now place
itself in State::done, removing the need for the subclasses to drive
the state to done (which is what complete would do).

With that change, compete is removed from the DCPBackfillDisk virtual
interface and is now implemented in the subclasses. This sub-class
version take a reference to the ActiveStream removing the need to
lock and handle failure.

This commit requires changes to tests because DCPBackfillDisk tasks
now require one less invocation to be done.

DCPBackfillMemoryBuffered is updated as well to keep the set of
backfill tasks consistent in how they are executed.

Change-Id: I55359e9286d111b4a7ce7d83e9a7c8a9a2aa0897

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-06 08:51:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-06 10:29:07.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44995/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [91/93]: test MB-34664...(60 ms) OK


98% tests passed, 7 tests failed out of 433

Total Test time (real) = 366.31 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44995/ )

Timeout of a CTest test 396/433 Test  #80: ep-engine_ep_unit_tests.ExecutorPoolTest/class FollyExecutorPool ..............................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44995/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37798/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37798/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16402/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16402/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:194:9:
error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18510/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [92/93]: test oso backfill...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:711 Test failed: `" (Expected `2", got `87" - Number of expected OSO markers sent to the consumer is incorrect)
[2022-04-06T09:26:13.985Z] (74 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18510/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19207/ : FAILURE

Compile error at [2022-04-06T09:25:21.846Z] ../kv_engine/engines/ep/src/configuration.h:185:10:
fatal error: "generated_configuration.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26585/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6119/ : FAILURE

Test exceeded the timeout:
[2022-04-06T09:40:56.672Z] Running [92/93]: test oso backfill.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6119/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17268/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [92/93]: test oso backfill...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:714 Test failed: `" (Expected `2", got `17" - Number of expected OSO markers sent to the consumer is incorrect)
[2022-04-06T09:04:50.659Z] (38 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18175/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [92/93]: test oso backfill...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:711 Test failed: `" (Expected `2", got `238" - Number of expected OSO markers sent to the consumer is incorrect)
[2022-04-06T09:22:00.993Z] (106 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18175/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6059/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
